add api for item and exceptions global
