# src/main/resources/api.yaml
@@ -9,6 +9,119 @@ servers:
   - url: https://mock.nk-order-process-ms.com/api/v1
     description: Mock server for testing endpoints with example data
 paths:
+  /item:
+    get:
+      summary: Retrieve a list of items
+      operationId: listItem
+      responses:
+        '200':
+          description: A list of items
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Item'
+      tags:
+        - Item
+    post:
+      summary: Create a new item
+      operationId: createItem
+      requestBody:
+        description: Item to be created
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemInput'
+      responses:
+        '201':
+          description: Item created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Item'
+        '409':
+          description: Conflict. Item already exists.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Item with the name 'Nike Shorts' already exists.
+                required:
+                  - message
+      tags:
+        - Item
+  /item/{id}:
+    get:
+      summary: Retrieve a single item by ID
+      operationId: getItemById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the item to retrieve
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Item found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Item'
+        '404':
+          description: Item not found
+      tags:
+        - Item
+    put:
+      summary: Update an existing item by ID
+      operationId: updateItem
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the item to update
+          schema:
+            type: string
+      requestBody:
+        description: Updated item data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemInput'
+      responses:
+        '200':
+          description: Item updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Item'
+        '404':
+          description: Item not found
+      tags:
+        - Item
+    delete:
+      summary: Delete a item by ID
+      operationId: deleteItem
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the item to delete
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Item deleted successfully
+        '404':
+          description: Item not found
+      tags:
+        - Item
   /customer:
     get:
       summary: Retrieve a list of customer
@@ -41,6 +154,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Customer'
+        '409':
+          description: Conflict. Customer already exists.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Customer with the document 12345678974 and name X already exists.
+                required:
+                  - message
       tags:
         - Customer
   /customer/{id}:
@@ -112,6 +237,42 @@ paths:
         - Customer
 components:
   schemas:
+    Item:
+      type: object
+      properties:
+        id:
+          type: string
+          description: The unique identifier of the item.
+          example: 64b7fd18e13e3c76f1f6d4b2
+        description:
+          type: string
+          description: A brief description of the item.
+          example: "Shorts"
+        brandName:
+          type: string
+          description: A brand name of item.
+          example: "Nike"
+        unitPrice:
+          type: number
+          format: float
+          description: The price per unit of the item.
+          example: 100
+    ItemInput:
+      type: object
+      properties:
+        description:
+          type: string
+          description: A brief description of the item.
+          example: "Shorts"
+        brandName:
+          type: string
+          description: A brand name of item.
+          example: "Nike"
+        unitPrice:
+          type: number
+          format: float
+          description: The price per unit of the item.
+          example: 100
     Customer:
       type: object
       properties:
